--- a/style.css
+++ b/style.css
@@ -36,9 +36,49 @@
 }
 
 body {
-  background-color: black;
-  color: aquamarine;
+  /* background-color: black; */
+  color: blue;
   font-family: "Lato", sans-serif;
   padding: 0;
   margin: 0;
+}
+nav {
+  background-color: rgb(101, 101, 156);
+  color: white;
+  padding: 20px 50px;
+}
+.navTop {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.search {
+  display: flex;
+  align-items: center;
+  background-color: cornflowerblue;
+  padding: 10px 20px;
+  border-radius: 10px;
+}
+.searchInput {
+  border: none;
+  background-color: transparent;
+}
+.searchInput::placeholder {
+  color: lightblue;
+}
+.limitedOffer {
+  font-size: 20px;
+  border-bottom: 2px solid yellow;
+  cursor: pointer;
+}
+.navBottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.menuItem {
+  margin-right: 50px;
+  cursor: pointer;
+  color: aqua;
+  font-weight: 400;
 }
