--- a/style.css
+++ b/style.css
@@ -82,3 +82,125 @@ nav {
   color: aqua;
   font-weight: 400;
 }
+
+.slider {
+  background: url(./images/b1.jpg);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 71%);
+  height: 100vh;
+  position: relative;
+  /* overflow: hidden; */
+}
+.sliderWrapper {
+  display: flex;
+  width: 500vw;
+  height: 100%;
+}
+.sliderItem {
+  width: 100vw;
+  /* height: 100%; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.sliderBg {
+  width: 750px;
+  height: 750px;
+  border-radius: 50%;
+  position: absolute;
+  background-color: cornflowerblue;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sliderImg {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  /* border-radius: 50%; */
+  z-index: 1;
+}
+.sliderTitle {
+  position: absolute;
+  top: 8%;
+  left: 0.5%;
+  font-size: 45px;
+  font-weight: 900;
+  color: aliceblue;
+  z-index: 1;
+}
+.sliderDesc {
+  position: absolute;
+  bottom: 8%;
+  right: 4%;
+  font-size: 30px;
+  font-weight: 300;
+  color: aliceblue;
+  border: 1px solid grey;
+  z-index: 1;
+}
+.visitButton {
+  position: absolute;
+  top: 8%;
+  right: 5%;
+  font-size: 30px;
+  font-weight: 900;
+  /* color: grey; */
+  border: 1px solid grey;
+  z-index: 1;
+  cursor: pointer;
+  border-radius: 10%;
+  padding: 5px 10px;
+}
+.visitButton:hover {
+  background-color: black;
+  color: white;
+}
+.sliderItem:nth-child(1) .sliderBg,
+.sliderItem:nth-child(1) .visitButton {
+  background-color: yellow;
+}
+
+.sliderItem:nth-child(2) .sliderBg,
+.sliderItem:nth-child(2) .visitButton {
+  background-color: #369e62;
+}
+
+.sliderItem:nth-child(3) .sliderBg,
+.sliderItem:nth-child(3) .visitButton {
+  background-color: rebeccapurple;
+}
+
+.sliderItem:nth-child(4) .sliderBg,
+.sliderItem:nth-child(4) .visitButton {
+  background-color: teal;
+}
+
+.sliderItem:nth-child(5) .sliderBg,
+.sliderItem:nth-child(5) .visitButton {
+  background-color: cornflowerblue;
+}
+.sliderItem:nth-child(1) .sliderDesc,
+.sliderItem:nth-child(1) .sliderTitle {
+  color: yellow;
+}
+.sliderItem:nth-child(2) .sliderDesc,
+.sliderItem:nth-child(2) .sliderTitle {
+  color: #369e62;
+}
+
+.sliderItem:nth-child(3) .sliderDesc,
+.sliderItem:nth-child(3) .sliderTitle {
+  color: rebeccapurple;
+}
+
+.sliderItem:nth-child(4) .sliderDesc,
+.sliderItem:nth-child(4) .sliderTitle {
+  color: teal;
+}
+
+.sliderItem:nth-child(5) .sliderDesc,
+.sliderItem:nth-child(5) .sliderTitle {
+  color: cornflowerblue;
+}
