--- a/style.css
+++ b/style.css
@@ -246,18 +246,16 @@ nav {
 }
 
 .payment {
-  display: none;
   width: 500px;
   height: 500px;
   background-color: #fff;
-  position: absolute;
-  top: 0;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
   margin: auto;
   padding: 10px 50px;
-  /* display: flex; */
+  display: none;
   flex-direction: column;
   box-shadow: 10px -17px 17px -7px rgba(0, 0, 0, 0.6);
   -webkit-box-shadow: 10px -17px 17px -7px rgba(0, 0, 0, 0.6);
@@ -281,6 +279,47 @@ label {
   color: lightgray;
 }
 
+.cardIcons {
+  display: flex;
+}
+.cardIcon {
+  margin-right: 10px;
+}
+.cardInfo {
+  display: flex;
+  justify-content: space-between;
+}
+.sm {
+  width: 30%;
+}
+.payButton {
+  position: absolute;
+  height: 40px;
+  bottom: -40px;
+  width: 100%;
+  left: 0;
+  box-shadow: 10px -17px 17px -7px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 10px -17px 17px -7px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 10px -17px 17px -7px rgba(0, 0, 0, 0.6);
+  background-color: #369e62;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+.close {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  background-color: gray;
+  color: white;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  padding: 2px;
+}
 .productImg {
   width: 50%;
 }
