--- a/style.css
+++ b/style.css
@@ -42,9 +42,12 @@ body {
   padding: 0;
   margin: 0;
 }
+body section {
+  padding-left: 20px;
+}
 nav {
-  background-color: rgb(101, 101, 156);
-  color: white;
+  background-color: rgb(232, 232, 235);
+  color: black;
   padding: 20px 50px;
 }
 .navTop {
@@ -55,20 +58,19 @@ nav {
 .search {
   display: flex;
   align-items: center;
-  background-color: cornflowerblue;
   padding: 10px 20px;
   border-radius: 10px;
 }
 .searchInput {
   border: none;
-  background-color: transparent;
+  background-color: wheat;
 }
 .searchInput::placeholder {
-  color: lightblue;
+  color: black;
 }
 .limitedOffer {
   font-size: 20px;
-  border-bottom: 2px solid yellow;
+  border-bottom: 2px solid black;
   cursor: pointer;
 }
 .navBottom {
@@ -79,16 +81,63 @@ nav {
 .menuItem {
   margin-right: 50px;
   cursor: pointer;
-  color: aqua;
-  font-weight: 400;
+  color: black;
+  font-size: 20px;
+  font-weight: 600;
+  /* background-color: cornflowerblue; */
+  /* border: 1px solid black; */
+  z-index: 1;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 5px 10px;
+  box-shadow: 10px 17px 17px 7px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 10px 17px 17px -7px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 10px -17px 17px -7px rgba(0, 0, 0, 0.6);
 }
 
 .slider {
   background: url(./images/b1.jpg);
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 71%);
   height: 100vh;
-  position: relative;
+  position: sticky;
   overflow: hidden;
+  box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.2);
+}
+.imagesArea {
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.2);
+}
+.changeButtons {
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 2;
+}
+.menuButton {
+  margin-right: 10px;
+  cursor: pointer;
+  color: black;
+  font-size: 15px;
+  font-weight: 600;
+  /* background-color: cornflowerblue; */
+  z-index: 1;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 5px 10px;
+  box-shadow: 10px 17px 17px 7px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 10px 17px 17px -7px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 10px -17px 17px -7px rgba(0, 0, 0, 0.6);
+}
+.imagesArea h1 {
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: white;
+  z-index: 2;
+  margin-top: 10px;
+  padding-bottom: 30px;
 }
 .sliderWrapper {
   display: flex;
@@ -210,31 +259,116 @@ nav {
   align-items: center;
   justify-content: space-around;
 }
+.reviewsSection {
+  display: block;
+  box-shadow: 4px 4px 4px 10px rgba(0, 0, 0, 0.2);
+}
 .reviews {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 50px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 10px;
 }
 .review {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+  padding: 10px;
 }
 .reviewImg {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  border-radius: 10px;
 }
 .reviewTitle {
   font-size: 20px;
   font-weight: 600;
-  margin: 20px;
+  margin: 10px;
 }
 .reviewDesc {
   color: grey;
   width: 50%;
-  height: 100px;
+}
+
+.gallery {
+  padding: 50px;
+  display: block;
+  border-radius: 10px;
+  box-shadow: 4px 4px 4px 10px rgba(0, 0, 0, 0.2);
+}
+.galleryItems {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  gap: 20px;
+}
+.galleryItem {
+  flex: 1;
+  padding: 20px;
+  border-radius: 10px;
+
+  box-shadow: 4px 4px 4px 10px rgba(0, 0, 0, 0.2);
+}
+.galleryImg {
+  width: 100%;
+}
+
+.videoLink {
+  color: #333;
+  text-decoration: none;
+}
+.videos {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  border-radius: 10px;
+  box-shadow: 4px 4px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.video {
+  position: relative;
+  /* display: flex; */
+  padding-top: 56.25%; /* 16:9 aspect ratio */
+  overflow: hidden;
+  border-radius: 16px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+.videosH1 {
+  /* position: static; */
+  left: 0;
+  top: 0;
+}
+
+.video iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 16px;
+}
+
+.video .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-decoration: none;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  border-radius: 16px;
+}
+
+.video:hover .overlay {
+  opacity: 1;
 }
 
 .product {
@@ -396,67 +530,4 @@ label {
   background-color: black;
   color: white;
   letter-spacing: 1px;
-}
-.gallery {
-  padding: 50px;
-  display: flex;
-  max-width: 1200px;
-}
-.galleryItem {
-  flex: 1;
-  padding: 40px;
-}
-.galleryImg {
-  width: 100%;
-}
-
-.videoLink {
-  color: #333;
-  text-decoration: none;
-}
-.videos {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 20px;
-}
-
-.video {
-  position: relative;
-  padding-top: 56.25%; /* 16:9 aspect ratio */
-  overflow: hidden;
-  border-radius: 16px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-}
-
-.video iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
-  border-radius: 16px;
-}
-
-.video .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.4);
-  color: white;
-  font-size: 1.2rem;
-  font-weight: bold;
-  text-decoration: none;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  border-radius: 16px;
-}
-
-.video:hover .overlay {
-  opacity: 1;
 }
