--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@
 * {
   margin: 0;
 }
+html {
+  scroll-behavior: smooth;
+}
 :root {
   --space-xs: 10px;
   --space-sm: 20px;
@@ -284,12 +287,17 @@ nav {
   margin-right: 10px;
   color: var(--light0);
   background-color: var(--dark0);
-
   border-radius: 10px;
   padding: 5px 10px;
   box-shadow: 10px 5px 10px 7px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   border: 2px solid var(--light0);
+}
+.menuItem.active {
+  border-bottom: 2px solid currentColor;
+  font-weight: bold;
+  transform: scale(1.1);
+  transition: all 0.3s ease;
 }
 
 /* ================================== Section Slider Section========================== */
